--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         </button>
 
         <!-- Navigation container/wrapper -->
-        <div id="nav__menu" class="nav__menu" role="menu">
+        <div id="nav__menu" class="nav__menu">
           <!-- Main navigation -->
-          <ul class="nav__list" aria-label="Main menu">
+          <ul class="nav__list" role="menu" aria-label="Main menu">
             <!-- Navigation menu: Product -->
-            <li class="nav__item is-hoverable">
+            <li class="nav__item is-hoverable" role="menuitem">
               <a href="#" class="nav__link">Product</a>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -85,7 +85,7 @@
             </li>
 
             <!-- Navigation menu: Company -->
-            <li class="nav__item is-hoverable">
+            <li class="nav__item is-hoverable" role="menuitem">
               <a href="#" class="nav__link">Company</a>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -103,7 +103,7 @@
               </svg>
 
               <!-- Company dropdown menu -->
-              <div class="nav-dropdown-container">
+              <div class="nav-dropdown-container" role="menu">
                 <ul class="nav-dropdown" aria-label="Sub menu">
                   <li class="nav-dropdown__item" role="menuitem">
                     <a href="#" class="nav-dropdown__link">About</a>
@@ -122,7 +122,7 @@
             </li>
 
             <!-- Navigation menu: Connect -->
-            <li class="nav__item is-hoverable">
+            <li class="nav__item is-hoverable" role="menuitem">
               <a href="#" class="nav__link">Connect</a>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -140,7 +140,7 @@
               </svg>
 
               <!-- Connect dropdown menu -->
-              <div class="nav-dropdown-container">
+              <div class="nav-dropdown-container" role="menu">
                 <ul class="nav-dropdown" aria-label="Sub menu">
                   <li class="nav-dropdown__item" role="menuitem">
                     <a href="#" class="nav-dropdown__link">Contact</a>
@@ -156,12 +156,12 @@
             </li>
 
             <!-- Navigation CTA: Login -->
-            <li class="nav__item">
+            <li class="nav__item" role="menuitem">
               <a href="#">Login</a>
             </li>
 
             <!-- Navigation CTA item: Sign Up -->
-            <li class="nav__item">
+            <li class="nav__item" role="menuitem">
               <a href="#" class="button btn-sign-up">Sign Up</a>
             </li>
           </ul>
