More ARIA fixes

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
               </svg>
 
               <!-- Product dropdown menu -->
-              <div class="nav-dropdown-container" role="menu">
-                <ul class="nav-dropdown" aria-label="Sub menu">
+              <div class="nav-dropdown-container">
+                <ul class="nav-dropdown" role="menu" aria-label="Sub menu">
                   <li class="nav-dropdown__item" role="menuitem">
                     <a href="#" class="nav-dropdown__link">Overview</a>
                   </li>
@@ -103,8 +103,8 @@
               </svg>
 
               <!-- Company dropdown menu -->
-              <div class="nav-dropdown-container" role="menu">
-                <ul class="nav-dropdown" aria-label="Sub menu">
+              <div class="nav-dropdown-container">
+                <ul class="nav-dropdown" role="menu" aria-label="Sub menu">
                   <li class="nav-dropdown__item" role="menuitem">
                     <a href="#" class="nav-dropdown__link">About</a>
                   </li>
@@ -140,8 +140,8 @@
               </svg>
 
               <!-- Connect dropdown menu -->
-              <div class="nav-dropdown-container" role="menu">
-                <ul class="nav-dropdown" aria-label="Sub menu">
+              <div class="nav-dropdown-container">
+                <ul class="nav-dropdown" role="menu" aria-label="Sub menu">
                   <li class="nav-dropdown__item" role="menuitem">
                     <a href="#" class="nav-dropdown__link">Contact</a>
                   </li>
